--- a/style.css
+++ b/style.css
@@ -16,23 +16,29 @@
   align-items: center;
 }
 
-.body {
+.main__page {
   background: #FFFFFF;
   width: 1920px;
 }
 
-.header {
+.page-header {
   width: 1920px;
+  margin-bottom: 14px;
 }
 
 .header__logo__block {
   cursor: pointer;
-  margin-right: 23px;
+  margin-right: 15px;
+}
+
+.header__logo__block:hover {
+  opacity: 0.8;
 }
 
 .header__sell__block {
+  padding: 0px 6px 0 6px;
   cursor: pointer;
-  margin-right: 35px;
+  margin-right: 25px;
 }
 
 .header__link__sell {
@@ -42,12 +48,13 @@
 }
 
 .header__link__sell:hover {
-  color: #1313cc;
+  color: #868689;
 }
 
 .header__register__block {
+  padding: 0px 6px 0px 6px;
   cursor: pointer;
-  margin-right: 105px;
+  margin-right: 99px;
 }
 
 .header__link__register {
@@ -56,13 +63,13 @@
 }
 
 .header__link__register:hover {
-  color: #1313cc;
+  color: #868689;
 }
 
 .header__search__block {
   background: #EDEDF0;
   border-radius: 99px;
-  margin-right: 30px;
+  margin-right: 25px;
   padding: 8px 8px 8px 44px;
   justify-content: center;
   position: relative;
@@ -71,10 +78,13 @@
 .header__input {
   min-width: 616px;
   font-size: 20px;
-  color: #19191D;
   background: #EDEDF0;
   border: none;
   outline: none;
+}
+
+.header__input::placeholder {
+  color: #19191D;
 }
 
 .search__icon__loupe {
@@ -90,8 +100,9 @@
 }
 
 .header__consumer__block {
+  padding: 0px 6px 0px 6px;
   cursor: pointer;
-  margin-right: 133px;
+  margin-right: 120px;
 }
 
 .link__consumer {
@@ -100,16 +111,20 @@
 }
 
 .link__consumer:hover {
-  color: #1313cc;
+  opacity: 0.8;
 }
 
 .header__sign__block {
   cursor: pointer;
-  margin-right: 21px;
+  margin-right: 24px;
   border: 1px solid #9DC2FF;
   box-sizing: border-box;
   border-radius: 4px;
-  padding: 8px 12px 8px 12px;
+  padding: 8px 16px 8px 16px;
+}
+
+.header__sign__block:hover {
+  opacity: 0.8;
 }
 
 .sign__link {
@@ -128,6 +143,10 @@
   border-radius: 4px;
   margin-right: 16px;
   position: relative;
+}
+
+.header__cart__block:hover {
+  opacity: 0.8;
 }
 
 .cart__link {
@@ -152,7 +171,7 @@
 
 .nav {
   width: 1920px;
-  margin-bottom: 25px;
+  margin-bottom: 22px;
 }
 
 .active__list__item {
@@ -169,9 +188,10 @@
 }
 
 .navigation__list {
-  width: 1493px;
-  margin-left: 215px;
-  padding: 0px;
+  min-width: 1493px;
+  padding: 0;
+  margin: 0;
+  margin: 0px 0px 16px 215px;
   justify-content: space-around;
   list-style-type: none;
   cursor: pointer;
@@ -186,10 +206,15 @@
 
 .list__item:hover {
   background: #EBF2FF;
+  opacity: 0.7;
   border-radius: 10px;
+  
+}
+.list__item:hover .list__link {
+  color: #2979FF;
 }
 
-.list__icon:hover .list__logo {
+.list__item:hover .list__path {
   fill: #2979FF;
 }
 
@@ -209,14 +234,14 @@
 
 .main__content {
   width: 1083px;
-  padding: 10px 16px 16px 16px;
+  padding: 16px;
   box-shadow: 0px 1px 2px rgba(58, 58, 68, 0.24), 0px 2px 4px rgba(90, 91, 106, 0.24);
   border-radius: 8px;
-  margin-bottom: 46px;
+  margin-bottom: 32px;
 }
 
 .main__navigation {
-  margin-bottom: 19px;
+  margin-bottom: 24px;
 }
 
 .main__select__useless__case {
@@ -257,6 +282,21 @@
   padding: 6.5px 9px 6.5px 12px;
 }
 
+.main__select__condition__case:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.main__select__delivery__case:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.main__select__useless__case:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
 .select__condition {
   border: none;
   font-size: 14px;
@@ -271,9 +311,6 @@
 }
 
 .main__select__delivery__case {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: center;
   margin-right: 233px;
   border: 1px solid #B4B4BB;
@@ -298,7 +335,6 @@
 .main__navigation__buttons {
   justify-content: center;
   margin-right: 24px;
-  width: 256px;
   height: 36px;
 }
 
@@ -316,6 +352,7 @@
   color: #5A5B6A;
   background: #EBF2FF;
   border-radius: 4px;
+  justify-content: center;
   cursor: pointer;
   border: none;
   width: 85px;
@@ -349,7 +386,7 @@
   border: none;
   background: #EBF2FF;
   border-radius: 4px;
-  padding: 10px 25px 10px 25px;
+  padding: 10px 25px 5px 25px;
 }
 
 .active__sort__button {
@@ -359,21 +396,22 @@
 }
 
 .main__filter__list {
-  padding-top: 4px;
   width: 100%;
 }
 
 .main__filter__title {
+  margin: 0;
   font-weight: 500;
   font-size: 14px;
   line-height: 143%;
   letter-spacing: 0.018em;
   color: #19191D;
-  margin-right: 13px;
+  margin-right: 7px;
 }
 
 .filter__list {
-  padding: 0px;
+  padding: 16px 0px;
+  margin: 0;
   list-style-type: none;
   cursor: pointer;
 }
@@ -385,23 +423,24 @@
 }
 
 .filter__list__item:hover {
-  background: #d5d5e0;
+  opacity: 0.7;
+  background: #e1e1f1;
   border-radius: 99px;
   padding: 6px 12px 5px 12px;
 }
 
 .filter__list__item__vin:hover {
-  background: #d5d5e0;
+  opacity: 0.7;
+  background: #e1e1f1;
   border-radius: 99px;
   padding: 6px 12px 5px 12px;
 }
 
 .filter__list__item {
-  margin-right: 8px;
+  margin-right: 14px;
 }
 
 .list__item__text, .list__item__text__vin {
-  margin-right: 4px;
   font-size: 14px;
   line-height: 143%;
   letter-spacing: 0.037em;
@@ -415,13 +454,16 @@
   justify-content: space-between;
 }
 
+.content__card__active {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 4px rgba(59, 69, 123, 0.2), 0px 4px 8px rgba(92, 107, 192, 0.2);
+  border-radius: 8px;
+}
+
 .content__card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  padding: 16px;
-  border-radius: 4px;
+  padding: 16px 16px 20px 16px;
+  border-radius: 8px;
 }
 
 .content__card:hover {
@@ -431,8 +473,8 @@
 }
 
 .card__icon__case {
-  width: 227px;
-  height: 236px;
+  max-width: 227px;
+  max-height: 236px;
   margin-bottom: 12px;
 }
 
@@ -441,24 +483,23 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  margin-bottom: 8px;
-  width: 227px;
-  height: 63px;
+  margin-bottom: 16px;
+  max-width: 227px;
+  height: 67px;
 }
 
 .card__content {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.0275em;
+  margin: 0;
   color: #19191D;
 }
 
 .card__price__case {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  margin-bottom: 7px;
+  text-align: center;
+  margin-bottom: 6px;
   width: 227px;
   height: 42px;
 }
@@ -470,9 +511,6 @@
 }
 
 .card__description__case {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: flex-start;
   margin-bottom: 8px;
   width: 227px;
@@ -480,15 +518,13 @@
 }
 
 .card__description {
+  margin: 0;
   color: #787885;
   font-size: 14px;
   line-height: 20px;
 }
 
 .card__buttons__case {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: flex-start;
   width: 227px;
   height: 34px;
@@ -499,9 +535,6 @@
 }
 
 .card__watch__button__case {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: center;
   background: #FFFFFF;
   border: 1px solid #9DC2FF;
@@ -528,23 +561,23 @@
 }
 
 .card__watch__button__case:hover {
-  background: #ece8e8;
+  background: #fffafa;
 }
 
 .main__sub__content {
-  min-width: 1115px;
-  margin-left: 376px;
+  min-width: 1119px;
+  margin-left: 371px;
   justify-content: space-between;
-  margin-bottom: 56px;
+  margin-bottom: 49px;
 }
 
 .content__tab__case {
-  min-width: 361px;
-  min-height: 125px;
-  padding-top: 16px;
-  padding-bottom: 10px;
+  padding: 30px 56px 33px 56px;
   background: #EDEDF0;
   border-radius: 8px;
+}
+.tab__title {
+  cursor: pointer;
 }
 
 .tab__title__text {
@@ -553,7 +586,7 @@
   font-weight: bold;
   font-size: 20px;
   line-height: 150%;
-  margin-bottom:0;
+  margin:0;
   letter-spacing: 0.0075em;
   color: rgba(0, 0, 0, 0.87);
 }
@@ -569,6 +602,7 @@
 
 .tab__icon {
   padding-bottom: 0px;
+  margin-bottom: 7px;
 }
 
 /* footer */
@@ -600,6 +634,10 @@
   cursor: pointer;
 }
 
+.customer__title:last-child {
+  margin: 0;
+}
+
 .customer__link__block {
   justify-content: space-between;
   margin-bottom: 25px;
@@ -613,13 +651,21 @@
   cursor: pointer;
 }
 
+.customer__link:hover {
+  opacity: 0.8;
+}
+
 .customer__phone__block {
   justify-content: space-between;
 }
 
 .contact__number__block {
   align-items: flex-start;
-  margin-right: 24px;
+  margin-right: 25px;
+}
+
+.contact__number:hover {
+  opacity: 0.6;
 }
 
 .contact__number {
@@ -651,7 +697,12 @@
   font-size: 16px;
   color: #1F1F1F;
   margin-bottom: 12px;
+  text-decoration: none;
   cursor: pointer;
+}
+
+.contact__mail:hover {
+  opacity: 0.8;
 }
 
 .contact__question {
@@ -673,6 +724,10 @@
   cursor: pointer;
 }
 
+.contact__button__block:hover {
+  opacity: 0.8;
+}
+
 .contact__button {
   border: none;
   outline: none;
@@ -692,9 +747,18 @@
   cursor: pointer;
 }
 
+.facebook__icon:hover {
+  opacity: 0.8;
+}
+
 .twitter__icon {
   cursor: pointer;
 }
+
+.twitter__icon:hover {
+  opacity: 0.8;
+}
+
 
 .business__block {
   align-items: flex-start;
@@ -727,6 +791,10 @@
   cursor: pointer;
 }
 
+.business__cooperation__link:hover {
+  opacity: 0.8;
+}
+
 .business__contact__number {
   align-items: flex-start;
   margin-right: 24px;
@@ -740,6 +808,10 @@
   color: #1F1F1F;
   margin-bottom: 12px;
   cursor: pointer;
+}
+
+.business__number:hover {
+  opacity: 0.8;
 }
 
 .business__time {
@@ -760,7 +832,12 @@
   letter-spacing: 0.0275em;
   color: #1F1F1F;
   margin-bottom: 12px;
+  text-decoration: none;
   cursor: pointer;
+}
+
+.business__mail:hover {
+  opacity: 0.8;
 }
 
 .business__question {
@@ -777,12 +854,12 @@
 .footer__form__block {
   background: #E6E6EA;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 13px;
 }
 
 .footer__form {
   justify-content: center;
-  margin-right: 11px;
+  margin-right: 17px;
 }
 
 .footer__form__icon__block {
@@ -799,7 +876,7 @@
   color: #787885;
   background: #E6E6EA;
   width: 132px;
-  margin-right: 59px;
+  margin-right: 55px;
   outline: none;
   border: none;
 }
@@ -807,7 +884,7 @@
 .form__button__block {
   border: 1px solid #9DC2FF;
   border-radius: 4px;
-  padding: 13px 27px 13px 15px;
+  padding: 7px 21px 11px 21px;
   cursor: pointer;
 }
 
@@ -825,6 +902,10 @@
   background: #E6E6EA;
 }
 
+.form__button__block:hover {
+  opacity: 0.8;
+}
+
 .footer__affiliate__link {
   padding: 17px 120px 17px 116px;
   border-left: 1px solid #D1D1E1;
@@ -839,6 +920,10 @@
   cursor: pointer;
 }
 
+.affiliate__link:hover {
+  opacity: 0.8;
+}
+
 .footer__add__link {
   padding: 17px 118px 17px 132px;
   border-right: 1px solid #D1D1E1;
@@ -851,6 +936,10 @@
   cursor: pointer;
   color: #1F1F1F;
 }
+
+.add__link:hover {
+  opacity: 0.8;
+} 
 
 .footer__payment__block {
   margin-left: 592px;
@@ -897,16 +986,20 @@
   align-items: flex-start;
   justify-content: flex-start;
   margin-left: 213px;
-  margin-right: 70px;
+  margin-right: 75px;
 }
 
 .department__button__block {
-  padding: 8px 51px 8px 80px;
+  padding: 8px 51px 8px 91px;
   border: 1px solid #9DC2FF;
   border-radius: 8px;
   position: relative;
-  margin-bottom: 45px;
+  margin-bottom: 47px;
   cursor: pointer;
+}
+
+.department__button__block:hover {
+  opacity: 0.8;
 }
 
 .department__button {
@@ -931,7 +1024,11 @@
   list-style: none;
   padding: 0;
 	margin: 0;
+}
+
+.department__list__item:hover {
   cursor: pointer;
+  opacity: 0.8;
 }
 
 .electronics__title__text {
@@ -978,7 +1075,6 @@
   background: url("./img/aside/blueErrowBottom.png") no-repeat left 37px center;
 }
 
-
 .cell__title__text {
   font-weight: 500;
   font-size: 16px;
@@ -1017,7 +1113,7 @@
 }
 
 .smart__title {
-  margin-bottom: 5px;
+  margin-bottom: 8px;
 }
 
 .smart__title__text {
@@ -1033,7 +1129,7 @@
   margin: 0;
   padding-left: 63px;
   position: relative;
-  margin-bottom: 11px;
+  margin-bottom: 9px;
   cursor: pointer;
 }
 
@@ -1054,12 +1150,12 @@
 
 .cell__button:hover {
   cursor: pointer;
-  background: #e6edf8;
+  opacity: 0.8;
 }
 
 .cell__button__arrow {
   position: absolute;
-  right: 120px;
+  right: 102px;
 }
 
 .business__list__title {
@@ -1124,7 +1220,7 @@
 }
 
 .collectibles__title {
-  margin-bottom: 10px;
+  margin-bottom: 14px;
   background: url("./img/aside/errowrigthblue.png") no-repeat left 30px center;
 }
 
@@ -1140,7 +1236,7 @@
 .expand__button__block {
   margin: 0;
   padding-left: 55px;
-  margin-bottom: 31px;
+  margin-bottom: 49px;
   cursor: pointer;
 }
 
@@ -1161,15 +1257,20 @@
 
 .expand__button:hover {
   cursor: pointer;
-  background: #dde6f8;
+  opacity: 0.8;
 }
 
 .collapsed__block {
-  margin-bottom: 24px;
+  margin-bottom: 23px;
   padding: 6px 170px 6px 6px;
   box-shadow: 0px 1px 2px rgba(58, 58, 68, 0.24), 0px 2px 4px rgba(90, 91, 106, 0.24);
   border-radius: 4px;
   background: url("./img/aside/greyErrowbottom.png") no-repeat right 19px center;
+}
+
+.collapsed__block:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .collapsed__title {
@@ -1182,7 +1283,7 @@
 }
 
 .expanded__filter__block {
-  margin-bottom: 24px;
+  margin-bottom: 21px;
   padding: 8px 0px 0px 12px;
   background: #F7F7FA;
   border-radius: 4px;
@@ -1203,7 +1304,7 @@
   color: #19191D;
 }
 
-.expanded__filter__label {
+#expanded__filter__label {
   padding-left: 5px;
   font-size: 16px;
   line-height: 150%;
@@ -1218,17 +1319,17 @@
   z-index: -1;
 }
 
-.expanded__filter__input+label:hover {
+.expanded__filter__input+#expanded__filter__label:hover {
   color: #656566;
   cursor: pointer;
 }
 
-.expanded__filter__input+label{
+.expanded__filter__input+#expanded__filter__label{
   display: inline-flex;
   align-items: center;
 }
 
-.expanded__filter__input+label::before {
+.expanded__filter__input+#expanded__filter__label::before {
   content: '';
   display: inline-block;
   width: 18px;
@@ -1242,14 +1343,14 @@
   background-size: 50% 50%;
 }
 
-.expanded__filter__input:checked+label::before {
+.expanded__filter__input:checked+#expanded__filter__label::before {
   border-color: #136fda;
   background-color: #1f78dd;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
 .year__filter__block {
-  padding: 8px 0px 0px 12px;
+  padding: 8px 0px 0px 15px;
   background: #F7F7FA;
   border-radius: 4px;
 }
@@ -1264,17 +1365,17 @@
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.022em;
-  padding-right: 111px;
+  padding-right: 107px;
   color: #19191D;
   margin: 0;
 }
 
-.year__filter__label {
+#year__filter__label {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.0275em;
   color: #19191D;
-  padding-bottom: 18px;
+  padding: 0px 0px 18px 0px;
 }
 
 .year__filter__input {
@@ -1283,17 +1384,17 @@
   z-index: -1;
 }
 
-.year__filter__input+label:hover {
+.year__filter__input+#year__filter__label:hover {
   color: #656566;
   cursor: pointer;
 }
 
-.year__filter__input+label{
+.year__filter__input+#year__filter__label{
   display: inline-flex;
   align-items: center;
 }
 
-.year__filter__input+label::before {
+.year__filter__input+#year__filter__label::before {
   content: '';
   display: inline-block;
   width: 18px;
@@ -1301,13 +1402,13 @@
   box-sizing: border-box;
   border: 3px solid #adb5bd;
   border-radius: 0.25em;
-  margin-right: 22px;
+  margin-right: 24px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 50% 50%;
 }
 
-.year__filter__input:checked+label::before {
+.year__filter__input:checked+#year__filter__label::before {
   border-color: #136fda;
   background-color: #1f78dd;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
